apps/vending-machine/vending-deployment.yaml
# vending-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vending-machine
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vending-machine
  template:
    metadata:
      labels:
        app: vending-machine
    spec:
      containers:
      - name: vending-app
        image: jirivasm/vending-app:latest
        ports:
        - containerPort: 5001
