apps/vending-machine/vending-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vending-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jirivasm.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vending-service
            port:
              number: 80
